examples/10-argocd/rendered-dir/dex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.metadata.annotations.checksum/cmd-params":2,"spec.template.metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.spec.containers[0].image":1,"spec.template.spec.containers[0].imagePullPolicy":1,"spec.template.spec.initContainers[0].image":2,"spec.template.spec.initContainers[0].imagePullPolicy":1}'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
      app.kubernetes.io/instance: argocd
  template:
    metadata:
      annotations:
        checksum/cmd-params: db68b8d9b50dfbaaeb3c42bd0c5f7c6956e604d098bdf5d4c81273f86410b458
      labels:
        app.kubernetes.io/name: argocd-dex-server
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/component: dex-server
        app.kubernetes.io/managed-by: ktpl
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: v3.5.3
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: argocd-dex-server
      automountServiceAccountToken: true
      containers:
        - name: dex-server
          image: ghcr.io/dexidp/dex:v2.45.1
          imagePullPolicy: IfNotPresent
          command:
            - /shared/argocd-dex
          args:
            - rundex
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
            - name: grpc
              containerPort: 5557
              protocol: TCP
            - name: metrics
              containerPort: 5558
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: static-files
              mountPath: /shared
            - name: dexconfig
              mountPath: /tmp
            - name: argocd-dex-server-tls
              mountPath: /tls
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: argocd-dex-server
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: static-files
          emptyDir: {}
        - name: dexconfig
          emptyDir: {}
        - name: argocd-dex-server-tls
          secret:
            secretName: argocd-dex-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
              - key: ca.crt
                path: ca.crt
      dnsPolicy: ClusterFirst
