examples/10-argocd/rendered-dir/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5556
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 5557
      targetPort: grpc
  selector:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
