examples/10-argocd/rendered-dir/dex/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  name: argocd-dex-server
  namespace: argocd
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1}'
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-server
              app.kubernetes.io/instance: argocd
      ports:
        - port: http
          protocol: TCP
        - port: grpc
          protocol: TCP
    - from:
        - namespaceSelector: {}
      ports:
        - port: metrics
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
      app.kubernetes.io/instance: argocd
  policyTypes:
    - Ingress
